@@ -756,7 +756,7 @@ contrib.url <- function(repos, type = getOption("pkgType"))
 }
 
 
-getCRANmirrors <- function(all=FALSE, local.only=FALSE)
+getCRANmirrors <- function(all = FALSE, local.only = FALSE)
 {
     m <- NULL
     if(!local.only) {
@@ -774,11 +774,13 @@ getCRANmirrors <- function(all=FALSE, local.only=FALSE)
 }
 
 
-chooseCRANmirror <- function(graphics = getOption("menu.graphics"))
+chooseCRANmirror <- function(graphics = getOption("menu.graphics"), ind = NULL)
 {
-    if(!interactive()) stop("cannot choose a CRAN mirror non-interactively")
-    m <- getCRANmirrors(all=FALSE, local.only=FALSE)
-    res <- menu(m[, 1L], graphics, "CRAN mirror")
+    if(is.null(ind) && !interactive())
+        stop("cannot choose a CRAN mirror non-interactively")
+    m <- getCRANmirrors(all = FALSE, local.only = FALSE)
+    res <- if (length(ind)) as.integer(ind)[1L] else
+    menu(m[, 1L], graphics, "CRAN mirror")
     if(res > 0L) {
         URL <- m[res, "URL"]
         repos <- getOption("repos")
@@ -788,9 +790,10 @@ chooseCRANmirror <- function(graphics = getOption("menu.graphics"))
     invisible()
 }
 
-chooseBioCmirror <- function(graphics = getOption("menu.graphics"))
+chooseBioCmirror <- function(graphics = getOption("menu.graphics"), ind = NULL)
 {
-    if(!interactive()) stop("cannot choose a BioC mirror non-interactively")
+    if(is.null(ind) && !interactive())
+        stop("cannot choose a BioC mirror non-interactively")
     m <- c("Seattle (USA)"="http://www.bioconductor.org"
 	   , "Bethesda (USA)"="http://watson.nci.nih.gov/bioc_mirror"
 	   , "Dortmund (Germany)"="http://bioconductor.statistik.tu-dortmund.de"
@@ -800,7 +803,8 @@ chooseBioCmirror <- function(graphics = getOption("menu.graphics"))
 	   , "Canberra (Australia)" = "http://mirror.aarnet.edu.au/pub/bioconductor/"
 	   , "Sao Paulo (Brazil)" = "http://bioconductor.fmrp.usp.br/"
 	   )
-    res <- menu(names(m), graphics, "BioC mirror")
+    res <- if (length(ind)) as.integer(ind)[1L] else
+    menu(names(m), graphics, "BioC mirror")
     if(res > 0L) options("BioC_mirror" = m[res])
     invisible()
 }
