@@ -1,6 +1,6 @@
 % File src/library/utils/man/chooseBioCmirror.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 2009-2010 R Core Team
+% Copyright 2009-2013 R Core Team
 % Distributed under GPL 2 or later
 
 \name{chooseBioCmirror}
@@ -11,13 +11,15 @@
   Interact with the user to choose a Bioconductor mirror.
 }
 \usage{
-chooseBioCmirror(graphics = getOption("menu.graphics"))
+chooseBioCmirror(graphics = getOption("menu.graphics"), ind = NULL)
 }
 \arguments{
   \item{graphics}{logical.  If true, use a graphical list: on Windows or
     Mac OS X GUI use a list box, and on a Unix-alike if package
     \pkg{tcltk} and an X server are available, use a Tk
     widget.  Otherwise use a text \code{\link{menu}}.}
+  
+  \item{ind}{Optional numeric value giving which entry to select.}
 }
 \details{
   This sets the option \code{"BioC_mirror"}: it needs to be used before
