@@ -1,6 +1,6 @@
 % File src/library/utils/man/chooseCRANmirror.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2009 R Core Team
+% Copyright 1995-2013 R Core Team
 % Distributed under GPL 2 or later
 
 \name{chooseCRANmirror}
@@ -11,7 +11,7 @@
   Interact with the user to choose a CRAN mirror.
 }
 \usage{
-chooseCRANmirror(graphics = getOption("menu.graphics"))
+chooseCRANmirror(graphics = getOption("menu.graphics"), ind = NULL)
 
 getCRANmirrors(all = FALSE, local.only = FALSE)
 }
@@ -20,6 +20,8 @@ getCRANmirrors(all = FALSE, local.only = FALSE)
     Mac OS X GUI use a list box, and on a Unix-alike if package
     \pkg{tcltk} and an X server are available, use a Tk
     widget. Otherwise use a text \code{\link{menu}}.}
+
+  \item{ind}{Optional numeric value giving which entry to select.}
 
   \item{all}{Logical, get all known mirrors or only the ones flagged as OK.}
   \item{local.only}{Logical, try to get most recent list from CRAN or
